--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -85,9 +85,19 @@
     }
 
     &__links{
+        position: relative;
         width: 100%;
         margin: 0px 0px 50px 0px;
-        border-top: 3px solid #CCCCCC;
+        &::after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 3px;
+            background-color: #CCCCCC;
+            top: -3px;
+            left: 0;
+            z-index: 1;
+        }
 
         @media(max-width: $md2+px){
             margin: 80px 0px 50px 0px;
@@ -109,8 +119,8 @@
 
             @media(any-hover:hover){ 
                 &:hover{
-                    border-color: #eb3719;
-                    z-index: 1;
+                    border-color: $yellowColor;
+                    z-index: 10;
                 }
             }
 
@@ -143,7 +153,7 @@
                         &--img{
                             svg{
                                 path{
-                                    fill: #eb3719;
+                                    fill: $yellowColor;
                                 }
                             }
                         }
