--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -1009,6 +1009,7 @@ $color: #555;
         padding: 30px 0px 20px 24px;
         transform: translateY(50%);
         position: relative;
+        z-index: 5;
 
         p{
             margin: 0;
@@ -1090,6 +1091,8 @@ $color: #555;
         flex: 1;
         height: 465px;
         background: linear-gradient(172.5deg, #343434 5.81%, #26272C 121.02%);
+        z-index: 1;
+        opacity: 0;
 
         &--inner{
             display: flex;
