--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -58,7 +58,8 @@
     }
 
     &__mail{
-
+        transform: translateY(80px);
+        opacity: 0;
         &--img{
             display: flex;
             margin: 0px 0px 20px 0px;
@@ -82,6 +83,16 @@
 
             color: #444444;
         }
+    }
+
+    &__telephone{
+        transform: translateY(-80px);
+        opacity: 0;
+    }
+
+    &__skype{
+        transform: translateY(80px);
+        opacity: 0;
     }
 
     &__links{
@@ -116,17 +127,34 @@
             border: 3px solid #CCCCCC;
             margin: -3px -1px 0px -2px;
             transition: .5s ease;
+            z-index: 10;
 
             @media(any-hover:hover){ 
                 &:hover{
                     border-color: $yellowColor;
-                    z-index: 10;
+                    z-index: 15;
                 }
+            }
+
+            &--instagram{
+                transform: translateY(50px);
+                opacity: 0;
+            }
+
+            &--facebook{
+                transform: translateY(50px);
+                opacity: 0;
+            }
+
+            &--facebook2{
+                transform: translateY(50px);
+                opacity: 0;
             }
 
             &--transform{
                 border: 3px solid #CCCCCC;
-                transform: translateY(-100%);
+                transform: translateY(-130%);
+                opacity: 0;
                 margin: 0px -1px -3px -2px;;
             }
 
