--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -29,7 +29,7 @@
             width: 80%;
 
             @media(max-width: $md4+px){
-                width: 59px;
+                width: 70%;
             }
         }
     }
