--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -96,7 +96,7 @@ body{
         box-shadow: 0px 18px 25px rgba(201, 148, 43, 0.336362);
         border-radius: 4px;
         animation: wrapperIconAnim 1s infinite;
-        z-index: 10000;
+        z-index: 1000000000;
 
         img{
             width: 50%;
