--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -170,7 +170,7 @@ body.lock {
   border-radius: 4px;
   -webkit-animation: wrapperIconAnim 1s infinite;
           animation: wrapperIconAnim 1s infinite;
-  z-index: 10000;
+  z-index: 1000000000;
 }
 @media (max-width: 1130px) {
   .wrapper__icon {
@@ -226,10 +226,23 @@ body.lock {
   padding-left: 3px;
   padding-right: 16px;
 }
+@media (max-width: 1130px) {
+  .header__wrapper {
+    padding-top: calc(20px + 28 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 1130px) {
+  .header__wrapper {
+    padding-bottom: calc(20px + 28 * ((100vw - 320px) / 810));
+  }
+}
 @media (min-width: 991.98px) {
   .header__wrapper {
     padding: 48px 0px;
   }
+}
+.header__logo {
+  z-index: 100000000;
 }
 @media (max-width: 991.98px) {
   .header__logo {
@@ -245,12 +258,8 @@ body.lock {
   }
 }
 .header__logo img {
-  width: 80%;
-}
-@media (max-width: 479.98px) {
-  .header__logo img {
-    width: 70%;
-  }
+  width: 90%;
+  height: 90%;
 }
 .header__burger {
   position: relative;
@@ -261,7 +270,7 @@ body.lock {
       -ms-flex-align: center;
           align-items: center;
   gap: 20px;
-  z-index: 1000000;
+  z-index: 10000;
 }
 @media (max-width: 1130px) {
   .header__burger {
@@ -304,21 +313,29 @@ body.lock {
 .header__burger.active .header__burger--btn {
   gap: 15px;
 }
-.header__burger.active .header__burger--menu {
-  height: 477px;
-  opacity: 1;
-  visibility: visible;
+@media (min-width: 479.98px) {
+  .header__burger.active .header__burger--menu {
+    height: 477px;
+    opacity: 1;
+    visibility: visible;
+  }
+  .header__burger.active .header__burger--items {
+    opacity: 1;
+  }
+  .header__burger.active .header__burger--items::after {
+    height: 1px;
+    -webkit-transition: 0.3s ease 0.2s;
+    transition: 0.3s ease 0.2s;
+  }
+  .header__burger.active .header__burger--items::before {
+    height: 1px;
+  }
 }
-.header__burger.active .header__burger--items {
-  opacity: 1;
-}
-.header__burger.active .header__burger--items::after {
-  height: 1px;
-  -webkit-transition: 0.3s ease 0.2s;
-  transition: 0.3s ease 0.2s;
-}
-.header__burger.active .header__burger--items::before {
-  height: 1px;
+@media (max-width: 479.98px) {
+  .header__burger.active .header__burger--menu {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
 }
 .header__burger--btn {
   display: -webkit-box;
@@ -347,16 +364,11 @@ body.lock {
   }
 }
 .header__burger--name {
-  font-size: 19px;
+  font-size: 20px;
   color: #000000;
   margin: -5px 0px 0px 0px;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-}
-@media (max-width: 1130px) {
-  .header__burger--name {
-    font-size: calc(15px + 4 * ((100vw - 320px) / 810));
-  }
 }
 .header__burger--body {
   position: relative;
@@ -400,15 +412,33 @@ body.lock {
   right: -40%;
   width: 335px;
   height: 0;
-  opacity: 0;
-  visibility: hidden;
   background: linear-gradient(195.03deg, #4D4D51 -6.72%, #26272C 136.1%);
-  border-radius: 10px;
   -webkit-transform-origin: top;
           transform-origin: top;
   -webkit-transition: opacity 0.3s ease, height 0.6s ease, visibility 0.6s ease;
   transition: opacity 0.3s ease, height 0.6s ease, visibility 0.6s ease;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   margin: 0px 20px 0px 0px;
+}
+@media (min-width: 479.98px) {
+  .header__burger--menu {
+    border-radius: 10px;
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+@media (max-width: 479.98px) {
+  .header__burger--menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
 }
 .header__burger--menu--inner {
   display: -webkit-box;
@@ -418,9 +448,21 @@ body.lock {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-left: 20px;
-  padding-right: 20px;
   height: 100%;
+}
+@media (min-width: 479.98px) {
+  .header__burger--menu--inner {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (max-width: 479.98px) {
+  .header__burger--menu--inner {
+    padding-top: 110px !important;
+    padding-right: 20px;
+    padding-bottom: 110px;
+    padding-left: 20px;
+  }
 }
 .header__burger--items {
   display: -webkit-box;
@@ -443,32 +485,66 @@ body.lock {
   position: relative;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-  opacity: 0;
 }
-.header__burger--items::before {
-  content: "";
-  position: absolute;
-  background-color: #5B5B5B;
-  width: 100%;
-  height: 0;
-  top: 0;
-  left: 0;
+@media (min-width: 991.98px) {
+  .header__burger--items {
+    opacity: 0;
+  }
 }
-.header__burger--items::after {
-  content: "";
-  position: absolute;
-  background-color: #5B5B5B;
-  width: 100%;
-  height: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-transition: 0s;
-  transition: 0s;
+@media (max-width: 479.98px) {
+  .header__burger--items {
+    border-top: 2px solid #5B5B5B;
+    border-bottom: 2px solid #5B5B5B;
+  }
+}
+@media (min-width: 479.98px) {
+  .header__burger--items::before {
+    content: "";
+    position: absolute;
+    background-color: #5B5B5B;
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+  }
+  .header__burger--items::after {
+    content: "";
+    position: absolute;
+    background-color: #5B5B5B;
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transition: 0s;
+    transition: 0s;
+  }
 }
 .header__burger--item {
   font-size: 24px;
   color: #fff;
   font-family: MontserratMedium;
+}
+@media (max-width: 1130px) {
+  .header__burger--item {
+    font-size: calc(18px + 6 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 479.98px) {
+  .header__burger--item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #4F4F57;
+    width: 217px;
+    height: 45px;
+    border-radius: 8px;
+  }
 }
 .header__burger--social {
   display: -webkit-box;
@@ -484,8 +560,22 @@ body.lock {
   padding: 28px 0px;
 }
 .header__burger--social--link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 28px;
+  height: 30px;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+}
+.header__burger--social--link svg {
+  width: 150%;
 }
 @media (any-hover: hover) {
   .header__burger--social--link:hover {
@@ -724,17 +814,7 @@ body.lock {
 }
 @media (max-width: 767.98px) {
   .innovate {
-    height: 600px;
-  }
-}
-@media (max-width: 679.98px) {
-  .innovate {
-    height: 500px;
-  }
-}
-@media (max-width: 479.98px) {
-  .innovate {
-    height: 600px;
+    height: 550px;
   }
 }
 .innovate svg {
@@ -817,6 +897,11 @@ body.lock {
   }
 }
 
+@media (max-width: 679.98px) {
+  .featured__container {
+    padding: 0;
+  }
+}
 .featured__inner {
   padding: 0px 0px 160px 0px;
 }
@@ -840,6 +925,26 @@ body.lock {
   margin: 0px 0px 0px 93px;
   z-index: 50;
   position: relative;
+}
+@media (max-width: 1130px) {
+  .featured__title {
+    width: calc(170px + 20 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 1130px) {
+  .featured__title {
+    height: calc(170px + 20 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 991.98px) {
+  .featured__title {
+    margin: 0px 0px 0px 20%;
+  }
+}
+@media (max-width: 679.98px) {
+  .featured__title {
+    margin: 0px 0px 0px 20px;
+  }
 }
 .featured__title P {
   margin: 0;
@@ -899,14 +1004,34 @@ body.lock {
 .featured__title.active .top {
   width: 188px;
 }
+@media (max-width: 1130px) {
+  .featured__title.active .top {
+    width: calc(168px + 20 * ((100vw - 320px) / 810));
+  }
+}
 .featured__title.active .right {
   height: 188px;
+}
+@media (max-width: 1130px) {
+  .featured__title.active .right {
+    height: calc(168px + 20 * ((100vw - 320px) / 810));
+  }
 }
 .featured__title.active .left {
   height: 188px;
 }
+@media (max-width: 1130px) {
+  .featured__title.active .left {
+    height: calc(168px + 20 * ((100vw - 320px) / 810));
+  }
+}
 .featured__title.active .bottom {
   width: 188px;
+}
+@media (max-width: 1130px) {
+  .featured__title.active .bottom {
+    width: calc(168px + 20 * ((100vw - 320px) / 810));
+  }
 }
 .featured__body {
   display: -ms-grid;
@@ -1047,6 +1172,75 @@ body.lock {
     -ms-grid-column: 5;
   }
 }
+@media (max-width: 991.98px) {
+  .featured__body {
+    display: none;
+  }
+}
+.featured__body--mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (min-width: 991.98px) {
+  .featured__body--mobile {
+    display: none;
+  }
+}
+.featured__body--mobile--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 31px 41px;
+  width: 70%;
+  height: 198px;
+  background: linear-gradient(172.5deg, #585859 5.81%, #26272C 121.02%);
+}
+@media (max-width: 679.98px) {
+  .featured__body--mobile--item {
+    width: 100%;
+  }
+}
+.featured__body--mobile--item-text {
+  font-size: 17px;
+  line-height: 17px;
+  color: #FFFFFF;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+@media (max-width: 1130px) {
+  .featured__body--mobile--item-text {
+    font-size: calc(13px + 4 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 679.98px) {
+  .featured__body--mobile--item-text {
+    max-width: 165px;
+  }
+}
+.featured__body--mobile--item-text:nth-child(2) {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+.featured__body--mobile--item-img {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+.featured__body--mobile--item-img img {
+  width: 100%;
+  height: 100%;
+}
 .featured__body--item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1183,9 +1377,14 @@ body.lock {
       -ms-flex: 1;
           flex: 1;
 }
+@media (max-width: 1130px) {
+  .achievements__info {
+    font-size: calc(10px + 20 * ((100vw - 320px) / 810));
+  }
+}
 .achievements__info--title {
   max-width: 400px;
-  margin: 0px 0px 0px 93px;
+  margin: 0px 10px 0px 93px;
   -webkit-transform: translateX(-300px);
           transform: translateX(-300px);
   opacity: 0;
@@ -1205,9 +1404,19 @@ body.lock {
   margin: 0px;
 }
 .achievements__info--block--main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 190px;
   height: 190px;
-  padding: 31px 0px 0px 23px;
+  padding: 31px 0px 20px 23px;
   border: 3px solid #CCCCCC;
   margin: 0px -3px 0px 0px;
   z-index: 2;
@@ -1216,6 +1425,22 @@ body.lock {
   line-height: 17px;
   color: #000000;
   opacity: 0;
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--main {
+    width: calc(150px + 40 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--main {
+    height: calc(150px + 40 * ((100vw - 320px) / 810));
+  }
+}
+.achievements__info--block--main p:nth-child(2) {
+  max-width: 115px;
+  font-size: 12px;
+  line-height: 23px;
+  color: #444444;
 }
 .achievements__info--block--main span {
   position: absolute;
@@ -1260,14 +1485,34 @@ body.lock {
 .achievements__info--block--main.active .top {
   width: 188px;
 }
+@media (max-width: 1130px) {
+  .achievements__info--block--main.active .top {
+    width: calc(148px + 40 * ((100vw - 320px) / 810));
+  }
+}
 .achievements__info--block--main.active .right {
   height: 188px;
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--main.active .right {
+    height: calc(148px + 40 * ((100vw - 320px) / 810));
+  }
 }
 .achievements__info--block--main.active .left {
   height: 188px;
 }
+@media (max-width: 1130px) {
+  .achievements__info--block--main.active .left {
+    height: calc(148px + 40 * ((100vw - 320px) / 810));
+  }
+}
 .achievements__info--block--main.active .bottom {
   width: 188px;
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--main.active .bottom {
+    width: calc(148px + 40 * ((100vw - 320px) / 810));
+  }
 }
 .achievements__info--block--minor {
   display: -webkit-box;
@@ -1282,6 +1527,8 @@ body.lock {
           justify-content: space-between;
   width: 355px;
   height: 293px;
+  width: 355px;
+  height: 293px;
   border: 3px solid #B4B4B4;
   z-index: 1;
   padding: 32px 0px 0px 0px;
@@ -1292,6 +1539,16 @@ body.lock {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   cursor: pointer;
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--minor {
+    width: calc(270px + 85 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 1130px) {
+  .achievements__info--block--minor {
+    height: calc(208px + 85 * ((100vw - 320px) / 810));
+  }
 }
 .achievements__info--block--minor p {
   margin: 0px 0px 0px 32px;
@@ -1339,8 +1596,8 @@ body.lock {
 .achievements__body {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: minmax(400px, 560px) minmax(380px, 540px);
-  grid-template-columns: minmax(400px, 560px) minmax(380px, 540px);
+  -ms-grid-columns: minmax(300px, 560px) minmax(270px, 540px);
+  grid-template-columns: minmax(300px, 560px) minmax(270px, 540px);
   -ms-grid-rows: 400px 340px 210px;
   grid-template-rows: 400px 340px 210px;
 }
@@ -1368,6 +1625,17 @@ body.lock {
   -ms-grid-row: 3;
   -ms-grid-column: 2;
 }
+@media (max-width: 679.98px) {
+  .achievements__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 .achievements__body--block--size-all {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1378,7 +1646,20 @@ body.lock {
   -ms-grid-column-span: 2;
   grid-column: span 2;
   background-color: #F4F4F4;
+  padding: 0px 0px 50px 0px;
   opacity: 0;
+}
+@media (max-width: 679.98px) {
+  .achievements__body--block--size-all {
+    height: 586px;
+  }
+}
+@media (max-width: 679.98px) {
+  .achievements__body--block--size-all {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
 }
 .achievements__body--block--size-left {
   display: -webkit-box;
@@ -1396,6 +1677,11 @@ body.lock {
   background-color: #FBD462;
   opacity: 0;
 }
+@media (max-width: 679.98px) {
+  .achievements__body--block--size-left {
+    height: 380px;
+  }
+}
 .achievements__body--block--size-right {
   position: relative;
   background-repeat: no-repeat;
@@ -1403,6 +1689,11 @@ body.lock {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   opacity: 0;
+}
+@media (max-width: 679.98px) {
+  .achievements__body--block--size-right {
+    height: 350px;
+  }
 }
 @media (any-hover: hover) {
   .achievements__body--block--size-right:hover .img__background--darker {
@@ -1467,9 +1758,7 @@ body.lock {
   transition: 0.3s ease;
 }
 .achievements__body--block--inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1477,6 +1766,18 @@ body.lock {
       -ms-flex: 0 1 730px;
           flex: 0 1 730px;
   margin: 0 auto;
+}
+@media (min-width: 767.98px) {
+  .achievements__body--block--inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media (max-width: 991.98px) {
+  .achievements__body--block--inner {
+    padding: 0px 15px;
+  }
 }
 .achievements__body--block--item {
   -webkit-box-flex: 0;
@@ -1508,7 +1809,7 @@ body.lock {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 320px;
           flex: 0 1 320px;
-  margin: 0px 0px 0px 93px;
+  margin: 0px 80px 0px 93px;
 }
 .achievements__body--block--text-inner p {
   max-width: 355px;
@@ -1576,6 +1877,41 @@ body.lock {
     -webkit-transform: translateX(5px);
             transform: translateX(5px);
   }
+}
+.achievements__slider {
+  display: block;
+  min-width: 0;
+}
+@media (min-width: 767.98px) {
+  .achievements__slider {
+    display: none;
+  }
+}
+.achievements__slider--slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.achievements__slider--slide--img img {
+  border-radius: 25px;
+}
+
+.swiper-slide {
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.swiper-slide-prev {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+.swiper-slide-next {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
 }
 
 .inquire__container {
