--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -812,9 +812,14 @@ body.lock {
   position: relative;
   overflow: hidden;
 }
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .innovate {
     height: 550px;
+  }
+}
+@media (max-width: 767.98px) {
+  .innovate {
+    height: 380px;
   }
 }
 .innovate svg {
