--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -164,8 +164,12 @@ $color: #555;
 .innovate{
     background: radial-gradient(ellipse at center, $color 0%, darken($color, 30%) 100%);
     height: 800px;
-    @media(max-width: $md3+px){
+    @media(max-width: $md2+px){
         height: 550px;
+    }
+
+    @media(max-width: $md3+px){
+        height: 380px;
     }
     z-index: 1;
     position: relative;
