--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -86,9 +86,9 @@ $color: #555;
             &--arrow{
                 transform: translate(24%, 6%);
                 
-                img{
-                    width: 100%;
-                    height: 100%;
+                svg{
+                    width: 97%;
+                    height: 97%;
                 }
             }
         }
