--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1264,14 +1264,14 @@ body.lock {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(../../img/featured/background.png);
+  background-image: url(../../img/featured/background.webp);
   z-index: 1;
 }
 .featured__body--item .img__background--clone {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #c5ab5c url(../../img/featured/background.png);
+  background: #c5ab5c url(../../img/featured/background.webp);
   z-index: 5;
   background-blend-mode: difference;
   opacity: 0;
@@ -1749,7 +1749,7 @@ body.lock {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(../../img/achievements/video-preivew.png);
+  background-image: url(../../img/achievements/video-preivew.webp);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
