--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -408,14 +408,14 @@ $color: #555;
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                background-image: url(../../img/featured/background.png);
+                background-image: url(../../img/featured/background.webp);
                 z-index: 1;
 
                 &--clone{
                     position: absolute;
                     width: 100%;
                     height: 100%;
-                    background: #c5ab5c url(../../img/featured/background.png);
+                    background: #c5ab5c url(../../img/featured/background.webp);
                     z-index: 5;
                     background-blend-mode: difference;
                     opacity: 0;
@@ -775,7 +775,7 @@ $color: #555;
                         position: absolute;
                         width: 100%;
                         height: 100%;
-                        background-image: url(../../img/achievements/video-preivew.png);
+                        background-image: url(../../img/achievements/video-preivew.webp);
                         background-size: cover;
                         background-position: center;
                         background-repeat: no-repeat;
